--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "version": "1.0.0",
   "autoload": {
       "psr-4": {
-          "Undkonsorten\\OAuth\\": "lib/OAuth/"
+          "OAuth\\": "lib/OAuth/"
       }
   }
 }
